--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.22.1",
+    "@sanity/icons": "^3.4.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.60.0",
+    "next": "14.2.15",
+    "next-sanity": "^9.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "sanity": "^3.60.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
