--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.60.0",
-    "next": "14.2.15",
+    "@tailwindcss/postcss": "^4.0.12",
+    "next": "^15.2.1",
     "next-sanity": "^9.5.0",
     "react": "^18",
     "react-dom": "^18",
@@ -24,7 +25,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12"
   }
 }
