--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.0.12",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.35.1",
     "next": "^15.2.1",
     "next-sanity": "^9.11.0",
     "react": "^18",
