--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev && NODE_ENV=development",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@notionhq/client": "^4.0.1",
+    "@openai/agents": "^0.0.11",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.0.12",
@@ -17,6 +18,7 @@
     "@upstash/redis": "^1.35.1",
     "next": "^15.2.1",
     "next-sanity": "^9.11.0",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.88.1",
