--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.0.12",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "^15.2.1",
     "next-sanity": "^9.11.0",
     "ogl": "^1.0.11",
