--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@openai/agents": "^0.0.11",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "@sanity/image-url": "^1.1.0",
     "@tailwindcss/postcss": "^4.0.12",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
