--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
